Fix high contrast for Network tools panel

--- a/front_end/network/networkPanel.css
+++ b/front_end/network/networkPanel.css
@@ -135,3 +135,16 @@
 .network-toolbar-container > :first-child {
     flex: 1 1 auto;
 }
+
+@media (forced-colors: active) {
+    .network-details-view {
+        background: Canvas;
+    }
+    #network-overview-container {
+        forced-color-adjust: none;
+    }
+    .resources-dividers-label-bar {
+        forced-color-adjust: none;
+        background-color: Canvas !important;
+    }
+}
